--- a/api/game-store/src/main/resources/application.properties
+++ b/api/game-store/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PORT
 server.port=1700
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bd_test?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/bd_gamestore?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
